--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
     "private": true,
     "dependencies": {
         "@material-ui/core": "^3.9.2",
+        "@material-ui/icons": "^3.0.2",
+        "classnames": "^2.2.6",
         "history": "^4.7.2",
         "moment": "^2.24.0",
         "react": "^16.7.0",
