--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dependencies": {
         "@material-ui/core": "^3.9.2",
         "@material-ui/icons": "^3.0.2",
+        "aos": "^2.3.4",
         "classnames": "^2.2.6",
         "history": "^4.7.2",
         "moment": "^2.24.0",
